--- a/report/templates/report/add.html
+++ b/report/templates/report/add.html
@@ -17,9 +17,11 @@
                         {% for product in products %} {% if category.id == product.category.id %}
                         <div class="row">
                             <div class="input-group-prepend col-8">
-                                <span class="input-group-text" id="{{ product.code }}">{{ product.product_name }}</span>
+                                <label for="{{ product.code }}">
+                                    <span class="input-group-text">{{ product.product_name }}</span>
+                                </label>
                             </div>
-                            <input type="number" min="0" step="0.01" class="form-control col-2" name="{{ product.code }}">
+                            <input type="number" min="0" step="0.01" class="form-control col-2" name="{{ product.code }}" id="{{ product.code }}">
                             <div class="input-group-append col-2">
                                 <span class="input-group-text">{{ product.unit }}</span>
                             </div>
@@ -34,7 +36,7 @@
         <div class="row">
             <div class="col-md-3 ml-md-auto"></div>
             <div class="col-md-3 ml-md-auto">
-                <button type="submit" class="btn btn-primary">Зберегти звіт</button>
+                <button type="submit" class="btn btn-success">Зберегти звіт</button>
             </div>
         </div>
     </div>
